Fix Health-in-battle and return after battle